--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 /*
- * This is a port of the tcl/tk Tktable Widget version 2.6 to perl/tk
+ * This is a port of the tcl/tk Tktable Widget version 2.8 to perl/tk
  */
 
 		*************************************
@@ -29,7 +29,7 @@ The basic features of the widget are:
  * cell validation support
  * Works everywhere Tk does (including Windows and Mac!)
     (Note perltk version has only been tested on Solaris, Linux, 
-      win98/mingw32 as of 8/18/00)
+      win98/NT/mingw32 as of 11/12/02)
 
 FINDING THE WIDGET
 
