--- a/Changes
+++ b/Changes
@@ -2,6 +2,12 @@ Summary of Changes to Tk::TableMatrix
 
 See ChangeLog for detailed changes.
 
+Release 1.01:  12/6/02
+
+* Fixed Error where the rowHeight method
+  was getting executed like a colWidth. This was introduced in the
+  update of TkTable 2.5 to 2.6
+
 Release 1.0:  12/2/02
 
 * Updated core C-code for the changes made from TkTable 2.6 to 2.8.
